--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Use wildcard * to expose all endpoints
+# Can also expose individal endpoints with a comma-delimited list like (health,info)
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
 
+info.app.name=Spring 6 Demo Project
+info.app.description=Iniital Demo app for learning
+info.app.version=1.0.0
