04-actuator-security-demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # Can also expose individal endpoints with a comma-delimited list like (health,info)
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
+#management.endpoints.web.exposure.exclude=info,health
 
 info.app.name=Spring 6 Demo Project
 info.app.description=Iniital Demo app for learning
