--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@ management.info.env.enabled=true
 info.app.name=Spring 6 Demo Project
 info.app.description=Iniital Demo app for learning
 info.app.version=1.0.0
+
+#Define custom properties
+coach.name=Sanath Jayasuriya
+team.name=Sri Lanka
+
+#Change Spring Boot embedded server port
+#server.port=7070
+
+# Set the context path of the application (all request should be localhost:8080/myapp/health and so on)
+#server.servlet.context-path=/myapp
